--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:d4f9ae075dfa81270dcb3732bf474c63136ca98dd1a5689211a6213b81f4f693"
+  "signature": "sha256:e5552179ad37f60908e5fc7bed25ca819d6b30efc330c88e04e186978261a938"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -90,7 +90,18 @@
       }
      },
      "source": [
-      "What about patents? Do they matter? Pattents are originaly intendet to \"promote the progress of science and the useful arts\". Is that realy still the case? "
+      "What about patents? Do they matter? Pattents are originaly intendet to \"promote the progress of science and the useful arts\". Is that still the case? "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# What open science is not\n",
+      "\n",
+      "* thread to scientists, this is an opportunity to proof our (increasing) relevance to socieity\n",
+      "* it is not a fundamental crituque on fellow researchers, it fits in the spirit of science: to be critical and be always open for improvements, because we know perfection is not of this world\n",
+      "* for inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century"
      ]
     },
     {
@@ -101,12 +112,14 @@
       }
      },
      "source": [
-      "# Why Would Open Science Matter?\n",
+      "# Why Should Open Science Matter?\n",
       "\n",
       "* Reproducability\n",
       "* Publically funded, publically accessible\n",
       "* Accelerate progress\n",
-      "* Increase societal impact"
+      "* Increase societal impact\n",
+      "* For the benefit of society: distribute technology withouth discrimination\n",
+      "* Universities have top level strategies all seem to align perfectly well with Open Science dogma's, for instance lets look at the recently updated DTU strategy:"
      ]
     },
     {
@@ -117,7 +130,33 @@
       }
      },
      "source": [
-      "We should really rethink what is the core task of a universities. Are we really creating for knowledge for the benefit of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career."
+      "We should really rethink what is the core task of a universities. Are we really creating for knowledge for the benefit of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career.\n",
+      "\n",
+      "Citing Peter Suber's [Open Access](http://mitpress.mit.edu/books/open-access) book:\n",
+      "\n",
+      "Even the wealthiest academic libraries in the world suffer serious access gaps. When the Harvard Faculty of Arts and Sciences voted unanimously for a strong OA policy in February 2008, Professor Stuart Shieber explained that cumulative price increases had forced the Harvard library to undertake \u201cserious cancellation efforts\u201d for budgetary reasons. Access gaps are worse at other affluent institutions, and worse still in the developing world. In 2008, Harvard subscribed to 98,900 serials and Yale to 73,900. The best-funded research library in India, at the Indian Institute of Science, subscribed to 10,600. Several sub-Saharan African university libraries subscribed to zero, offering their patrons access to no conventional journals except those donated by publishers.\n",
+      "\n",
+      "For example, how is it that we publish in the AIAA while DTU does not even have (digital) access to those libraries?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Challenges with Open Science\n",
+      "\n",
+      "* Scientitif careers are by default not made with an open approach. So how can we realistically expect researches to value an follow open science guidelines?"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Can publishing be made better? Or what do we need from publishers?\n",
+      "\n",
+      "* [What Motivates Reviewers? An Experiment in Economics](http://scholarlykitchen.sspnet.org/2014/05/28/what-motivates-reviewers-an-experiment-in-economics/)\n",
+      "\n",
+      "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d"
      ]
     },
     {
@@ -138,11 +177,26 @@
       "\n",
       "* EU Horizon 2020 call requires open access publishing (see [press release](http://europa.eu/rapid/press-release_IP-12-790_en.htm))\n",
       "\n",
-      "* \n",
+      "* EU [Open Data](http://ec.europa.eu/digital-agenda/public-sector-information-raw-data-new-services-and-products) agenda\n",
       "\n",
       "* Tesla (Elon Musk) [opens](http://www.teslamotors.com/blog/all-our-patent-are-belong-you) up all its patents: the real competitor is else where\n",
       "\n",
-      "* NASA is increasingly opening up [code](code.nasa.gov) works actively on engaging with the [community](http://open.nasa.gov/)\n"
+      "* NASA is increasingly opening up [code](code.nasa.gov), and works actively on engaging with the [community](http://open.nasa.gov/)\n",
+      "\n",
+      "* Alternative ways of (crowd) funding research, for example [Experiment](https://experiment.com/)\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# What is currently happening\n",
+      "\n",
+      "* UN called upon an emmergency climate top, US, China willing to finally commit to emmission reductions, Finland adopting 80% reduction scheme, ...\n",
+      "\n",
+      "* Climate change is our real challenge, in order to maximize renewable energy technologies we must work and share more openly. See what Tesla is doing!\n",
+      "\n",
+      "* http://centerforopenscience.org/"
      ]
     },
     {
@@ -153,7 +207,7 @@
       }
      },
      "source": [
-      "* NASA and community engagement: how to deal with negative wind turbine sentiment, subjective noise polution"
+      "* Parralel on NASA and community engagement: how to deal with negative wind turbine sentiment, subjective noise polution? Opening up will help dealing with this challenge."
      ]
     },
     {
@@ -176,6 +230,19 @@
       "# Tools\n",
       "\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {
+      "run_control": {
+       "breakpoint": false,
+       "state": "n"
+      }
+     },
+     "outputs": []
     }
    ],
    "metadata": {}
