--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:e5552179ad37f60908e5fc7bed25ca819d6b30efc330c88e04e186978261a938"
+  "signature": "sha256:48a1b76bfed2c453f990044ecdb0b34213ed7e30512bc305497c696871d18f40"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -95,17 +95,6 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "# What open science is not\n",
-      "\n",
-      "* thread to scientists, this is an opportunity to proof our (increasing) relevance to socieity\n",
-      "* it is not a fundamental crituque on fellow researchers, it fits in the spirit of science: to be critical and be always open for improvements, because we know perfection is not of this world\n",
-      "* for inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century"
-     ]
-    },
-    {
-     "cell_type": "markdown",
      "metadata": {
       "slideshow": {
        "slide_type": "slide"
@@ -120,6 +109,23 @@
       "* Increase societal impact\n",
       "* For the benefit of society: distribute technology withouth discrimination\n",
       "* Universities have top level strategies all seem to align perfectly well with Open Science dogma's, for instance lets look at the recently updated DTU strategy:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# What open science is not\n",
+      "\n",
+      "* thread to scientists, this is an opportunity to proof our (increasing) relevance to socieity\n",
+      "* it is not a fundamental crituque on fellow researchers, it fits in the spirit of science: to be critical and be always open for improvements, because we know perfection is not of this world\n",
+      "* for inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century\n",
+      "* The road to heaven\n",
+      "* Perfection"
      ]
     },
     {
@@ -143,9 +149,22 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Challenges with Open Science\n",
+      "# Challenges with Open Science and Wind Energy\n",
       "\n",
-      "* Scientitif careers are by default not made with an open approach. So how can we realistically expect researches to value an follow open science guidelines?"
+      "* Scientitif careers are by default not made with an open approach. So how can we realistically expect researches to value an follow open science guidelines?\n",
+      "* High impact Open Access journal\n",
+      "* Cultural change: code sharing, open source software development methodologies\n",
+      "* Cultural change:\n",
+      "* Open data: cultural change for open sharing of results (for example see the US, soon EU too?)\n",
+      "* Open data: persitant funding for infrastructure\n",
+      "* Retaining data: persistant funding for infrastructure\n",
+      "\n",
+      "Interesting discussion initiated by Phil Davis [here](http://scholarlykitchen.sspnet.org/2014/05/15/what-researchers-value-from-publishers-canadian-survey/). Some quotes:\n",
+      "\n",
+      "* Scientists have many identities, and tapping into the fundamental desire of the scientist-as-reader (access to everyone else\u2019s work), does not always coincide with the fundamental desire of the scientist-as-author (recognition by one\u2019s peers).\n",
+      "\n",
+      "* Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%.\n",
+      "\n"
      ]
     },
     {
@@ -157,6 +176,19 @@
       "* [What Motivates Reviewers? An Experiment in Economics](http://scholarlykitchen.sspnet.org/2014/05/28/what-motivates-reviewers-an-experiment-in-economics/)\n",
       "\n",
       "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Open Peer Review\n",
+      "\n",
+      "* High impact OA journal: chicken and egg story, first you need to a low impact journal, than grow\n",
+      "* Platforms: \n",
+      "\n",
+      "    * http://openreview.net/\n",
+      "    "
      ]
     },
     {
@@ -173,7 +205,7 @@
       "    \n",
       "    * UC Berkeley, 1.15M$ from the Sloan Foundation [link](http://ipython.org/sloan-grant.html)\n",
       "    \n",
-      "    * 3 US universities secured 37.5M$ from [link](http://blog.fperez.org/2013/11/an-ambitious-experiment-in-data-science.html) <img src=\"Data_Science_VD.png\" WIDTH=\"40%\">\n",
+      "    * 3 US universities secured 37.5M$ from [link](http://blog.fperez.org/2013/11/an-ambitious-experiment-in-data-science.html) <img src=\"images/Data_Science_VD.png\" WIDTH=\"40%\">\n",
       "\n",
       "* EU Horizon 2020 call requires open access publishing (see [press release](http://europa.eu/rapid/press-release_IP-12-790_en.htm))\n",
       "\n",
