--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:48a1b76bfed2c453f990044ecdb0b34213ed7e30512bc305497c696871d18f40"
+  "signature": "sha256:e00d34fdad4f99dfd8f4e3c8ea5eb5a404ee0b230028029b0b59419fb97ee47e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -54,9 +54,9 @@
       "\n",
       "* What is Open science?\n",
       "    \n",
-      "* Why Would Open Science Matter?\n",
+      "* Why should Open Science matter?\n",
       "    \n",
-      "* Problems and Pitfalls\n",
+      "* Problems and pitfalls\n",
       "\n",
       "* What is currently happening\n",
       "\n",
@@ -104,7 +104,7 @@
       "# Why Should Open Science Matter?\n",
       "\n",
       "* Reproducability\n",
-      "* Publically funded, publically accessible\n",
+      "* Publically funded, publically accessible (US, EU partially)\n",
       "* Accelerate progress\n",
       "* Increase societal impact\n",
       "* For the benefit of society: distribute technology withouth discrimination\n",
@@ -171,19 +171,43 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Can publishing be made better? Or what do we need from publishers?\n",
+      "# Open Data\n",
       "\n",
-      "* [What Motivates Reviewers? An Experiment in Economics](http://scholarlykitchen.sspnet.org/2014/05/28/what-motivates-reviewers-an-experiment-in-economics/)\n",
-      "\n",
-      "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d"
+      "* infrastructure\n",
+      "* data retention\n",
+      "* accessibility\n",
+      "* sharing"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "# Open Source\n",
+      "\n",
+      "* Software models open\n",
+      "* Code is an important part of our work, seldom reviewed properly\n",
+      "* Learn from the software development community\n",
+      "* Open source development community:\n",
+      "    \n",
+      "    * distributed teams, highly collaborative (international), transparant (cfr DTU strategy)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Open Access\n",
+      "\n",
+      "* Different levels: Gold, green, ...\n",
+      "* Monitoring project open access at DTU\n",
+      "\n",
       "# Open Peer Review\n",
       "\n",
+      "* [What Motivates Reviewers? An Experiment in Economics](http://scholarlykitchen.sspnet.org/2014/05/28/what-motivates-reviewers-an-experiment-in-economics/)\n",
+      "\n",
+      "    * \u201cIt takes a researcher 3-5 hours to review a manuscript,\u201d editors quip, \u201cwhether you give him/her a week or six months!\u201d\n",
+      "    \n",
       "* High impact OA journal: chicken and egg story, first you need to a low impact journal, than grow\n",
       "* Platforms: \n",
       "\n",
