again more work on the presentation, still trying to shape the presentation

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "name": "",
-  "signature": "sha256:e00d34fdad4f99dfd8f4e3c8ea5eb5a404ee0b230028029b0b59419fb97ee47e"
+  "signature": "sha256:7e1ecabc7e56c7eaf697b48b86b5a44461f94f911644d8d8b1fc6efdc846e32f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,7 +28,9 @@
       "\n",
       "Modern research often utilizes complex software models and large data sets not disclosed to the public domain. This approach hampers independent review and the reproducibility of research results. By removing such barriers, OS ensures that advancements are achieved through transparent and robustly validated steps. The review of scientific results in an open framework (open peer review) guarantees the quality of the results by enhanced transparency in the review process, and encourages active enduring contributions both from qualified reviewers and members of the research community. Dissemination and publication of scientific knowledge in an open access (OA) format reduces access barriers to published material, and enhances knowledge sharing. OA benefits the scientific community with the availability of a broader knowledge base, and the possibility to reach a wider audience, thus improves knowledge usage, increases citations, and amplifies the impact on society. The advantages of OA publications are recognized by mayor public funding programs, and they encourage actively to distribute the results from their sponsored projects as OA.\n",
       "\n",
-      "The shift towards an OS framework is occurring unevenly among disciplines. While some research fields are embracing more open practices rapidly, wind energy appears to lag behind. The paper aims at raising awareness, and stirring the debate within the wind energy research community about OS and its fundamental methods and tools. It is the authors\u2019 hope that the paper will initiate a collaborative and \u201copen\u201d discussion forum on Open Science using the Torque 2014 conference as its kick-off event."
+      "The shift towards an OS framework is occurring unevenly among disciplines. While some research fields are embracing more open practices rapidly, wind energy appears to lag behind. The paper aims at raising awareness, and stirring the debate within the wind energy research community about OS and its fundamental methods and tools. It is the authors\u2019 hope that the paper will initiate a collaborative and \u201copen\u201d discussion forum on Open Science using the Torque 2014 conference as its kick-off event.\n",
+      "\n",
+      "see also google docs working [document](https://docs.google.com/document/d/1_r1EDM-AAt1kRPv-zNWPDn_-so8K3Z_syrNjfXKb8_w/edit?pli=1#heading=h.gcjnjqj7727t)"
      ]
     },
     {
@@ -53,15 +55,8 @@
       "# Outline\n",
       "\n",
       "* What is Open science?\n",
-      "    \n",
-      "* Why should Open Science matter?\n",
-      "    \n",
-      "* Problems and pitfalls\n",
-      "\n",
       "* What is currently happening\n",
-      "\n",
       "* Tools\n",
-      "\n",
       "* Discussion"
      ]
     },
@@ -79,18 +74,10 @@
       "* Open source software and model development\n",
       "* Open peer review process\n",
       "* Open access publishing\n",
-      "* Patents?"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {
-      "slideshow": {
-       "slide_type": "notes"
-      }
-     },
-     "source": [
-      "What about patents? Do they matter? Pattents are originaly intendet to \"promote the progress of science and the useful arts\". Is that still the case? "
+      "\n",
+      "\n",
+      "* Standard practice other fields such as economics, mathematics\n",
+      "* Back to the basics of the scientific process"
      ]
     },
     {
@@ -103,12 +90,34 @@
      "source": [
       "# Why Should Open Science Matter?\n",
       "\n",
-      "* Reproducability\n",
-      "* Publically funded, publically accessible (US, EU partially)\n",
-      "* Accelerate progress\n",
+      "* Reproducibility of research results\n",
+      "* Publicly funded, publicly accessible (US, EU partially)\n",
+      "* Accelerate progress:\n",
+      "\n",
+      "    * more sharing\n",
+      "    * less double work\n",
+      "    * more checks\n",
+      "    * increased quality\n",
+      "\n",
       "* Increase societal impact\n",
-      "* For the benefit of society: distribute technology withouth discrimination\n",
-      "* Universities have top level strategies all seem to align perfectly well with Open Science dogma's, for instance lets look at the recently updated DTU strategy:"
+      "* For the benefit of all of society: distribute technology without discrimination\n",
+      "* University top level strategy seems to align perfectly well with Open Science dogma's:\n",
+      "    \n",
+      "    * international collaboration with fellow researchers\n",
+      "    * accelerate innovation\n",
+      "    * collaboration with industry\n",
+      "    * address relevant problems in society"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
+     "source": [
+      "for instance lets look at the recently updated [DTU strategy](http://portalen.dtu.dk/DTU_Generelt/APK/Om_DTU/officielle_dokumenter/Strategi.aspx):"
      ]
     },
     {
@@ -121,11 +130,9 @@
      "source": [
       "# What open science is not\n",
       "\n",
-      "* thread to scientists, this is an opportunity to proof our (increasing) relevance to socieity\n",
-      "* it is not a fundamental crituque on fellow researchers, it fits in the spirit of science: to be critical and be always open for improvements, because we know perfection is not of this world\n",
-      "* for inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century\n",
-      "* The road to heaven\n",
-      "* Perfection"
+      "* Thread to scientists, this is an opportunity to proof our (increasing) relevance to society\n",
+      "* It is not a fundamental critique on fellow researchers, it fits in the spirit of science: to be critical and be always open for improvements, because we know perfection is not of this world\n",
+      "* The road to heaven or perfection"
      ]
     },
     {
@@ -136,7 +143,9 @@
       }
      },
      "source": [
-      "We should really rethink what is the core task of a universities. Are we really creating for knowledge for the benefit of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career.\n",
+      "* For inspiration, quote some of Piketty's stuff in the introduction of Capital in the 21 century\n",
+      "\n",
+      "We should really go back to what is the core task of a universities. Are we really creating for knowledge for the benefit of all of mankind, or just targeted industries and interests? What is society expecting from us, beyond the industry lobby groups, and beyond professors wanting to secure the next round of funding to boost a career.\n",
       "\n",
       "Citing Peter Suber's [Open Access](http://mitpress.mit.edu/books/open-access) book:\n",
       "\n",
@@ -149,34 +158,16 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Challenges with Open Science and Wind Energy\n",
-      "\n",
-      "* Scientitif careers are by default not made with an open approach. So how can we realistically expect researches to value an follow open science guidelines?\n",
-      "* High impact Open Access journal\n",
-      "* Cultural change: code sharing, open source software development methodologies\n",
-      "* Cultural change:\n",
-      "* Open data: cultural change for open sharing of results (for example see the US, soon EU too?)\n",
-      "* Open data: persitant funding for infrastructure\n",
-      "* Retaining data: persistant funding for infrastructure\n",
-      "\n",
-      "Interesting discussion initiated by Phil Davis [here](http://scholarlykitchen.sspnet.org/2014/05/15/what-researchers-value-from-publishers-canadian-survey/). Some quotes:\n",
-      "\n",
-      "* Scientists have many identities, and tapping into the fundamental desire of the scientist-as-reader (access to everyone else\u2019s work), does not always coincide with the fundamental desire of the scientist-as-author (recognition by one\u2019s peers).\n",
-      "\n",
-      "* Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%.\n",
-      "\n"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
       "# Open Data\n",
       "\n",
-      "* infrastructure\n",
-      "* data retention\n",
-      "* accessibility\n",
-      "* sharing"
+      "* Infrastructure: university servers, dropbox, and others\n",
+      "* Data retention: duplicate data, commit to keeping data\n",
+      "* Accessibility for easy sharing\n",
+      "* Documentation\n",
+      "* Usage of standard storage formats and protocols: database, compressed archives\n",
+      "\n",
+      "\n",
+      "* Funding"
      ]
     },
     {
@@ -185,12 +176,14 @@
      "source": [
       "# Open Source\n",
       "\n",
-      "* Software models open\n",
-      "* Code is an important part of our work, seldom reviewed properly\n",
-      "* Learn from the software development community\n",
-      "* Open source development community:\n",
+      "* Software implementation of models are open\n",
+      "* Usage of version control system: Git, Mercurial (Hg)\n",
+      "* Code is an important part of our work, proper review is required\n",
+      "* Learn from the (open source) software development community: \n",
       "    \n",
-      "    * distributed teams, highly collaborative (international), transparant (cfr DTU strategy)"
+      "    * geographically distributed teams, highly collaborative (international), transparent\n",
+      "    * consistency: coding guidelines, code commit workflow\n",
+      "    * code review practices"
      ]
     },
     {
@@ -199,8 +192,15 @@
      "source": [
       "# Open Access\n",
       "\n",
-      "* Different levels: Gold, green, ...\n",
+      "* Different levels: gold, green, ...\n",
       "* Monitoring project open access at DTU\n",
+      "\n",
+      "\n",
+      "Interesting discussion initiated by Phil Davis [here](http://scholarlykitchen.sspnet.org/2014/05/15/what-researchers-value-from-publishers-canadian-survey/). Some quotes:\n",
+      "\n",
+      "* Scientists have many identities, and tapping into the fundamental desire of the scientist-as-reader (access to everyone else\u2019s work), does not always coincide with the fundamental desire of the scientist-as-author (recognition by one\u2019s peers).\n",
+      "\n",
+      "* Consider page 11 of the Canadian study. While 97% of respondents relied on their institution\u2019s subscription to access journal articles, the next most frequent response was contacting the author(s) directly for a copy (91%), followed by institutional repositories (76%), ignoring the article (75%), and social networking sites (50%). Pay per view took last spot at 27%.\n",
       "\n",
       "# Open Peer Review\n",
       "\n",
@@ -213,6 +213,41 @@
       "\n",
       "    * http://openreview.net/\n",
       "    "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
+     "source": [
+      "# Open Science Challenges for Wind Energy\n",
+      "\n",
+      "* Scientitif careers are by default not made with an open approach. So how can we realistically expect researches to value and follow open science guidelines?\n",
+      "\n",
+      "### Cultural and political challenges\n",
+      "* Code sharing, open source software development methodologies\n",
+      "* Open data: sharing of experimental and simulation results by default (for example see the US, soon EU too?)\n",
+      "* Agreements on software model interfaces and protocols\n",
+      "\n",
+      "### Funding and infrastructural challanges\n",
+      "* Open data: persitant funding for infrastructure\n",
+      "* Retaining data: persistant funding for infrastructure\n",
+      "* High impact Open Access journal: demand publishing open access license (Horizon 2020 requirement)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "# Problems and Pitfalls\n",
+      "\n",
+      "* Funding: cutting the branch you're sitting on\n",
+      "* Funding: expensive open access journals\n",
+      "* Unconftarble working in the public eye\n",
+      "* Currently no high impact open access journals"
      ]
     },
     {
@@ -239,7 +274,9 @@
       "\n",
       "* NASA is increasingly opening up [code](code.nasa.gov), and works actively on engaging with the [community](http://open.nasa.gov/)\n",
       "\n",
-      "* Alternative ways of (crowd) funding research, for example [Experiment](https://experiment.com/)\n"
+      "* Alternative ways of (crowd) funding research, for example [Experiment](https://experiment.com/)\n",
+      "\n",
+      "* [Center for Open Science](http://centerforopenscience.org/), [Open Science Framework](https://osf.io/)\n"
      ]
     },
     {
@@ -270,35 +307,42 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Problems and Pitfalls\n",
+      "# Tools\n",
       "\n",
-      "* IP issues\n",
-      "* Funding: cutting the branch you're sitting on\n",
-      "* Funding: expensive open access journals\n",
-      "* Unconftarble working in the public eye\n",
-      "* Currently no high impact open access journals"
+      "### Open Data\n",
+      "\n",
+      "\n",
+      "\n",
+      "### Open Source\n",
+      "* Version control: [Git](http://www.git-scm.com/), [Hg](http://mercurial.selenic.com/)\n",
+      "* Collaborative software development: [Github](https://github.com/), [Gitlab](https://www.gitlab.com/), [Redmine](http://www.redmine.org/), [Phabricator](http://phabricator.org/), [Bitbucket](https://bitbucket.org/)\n",
+      "\n",
+      "### Open Peer Review\n",
+      "\n",
+      "* http://openreview.net/"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "# Tools\n",
-      "\n"
+      "http://ivory.idyll.org/blog//2014-myths-of-computational-reproducibility.html\n",
+      "\n",
+      "http://ivory.idyll.org/blog//2014-eli-conversation.html"
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {
-      "run_control": {
-       "breakpoint": false,
-       "state": "n"
+      "slideshow": {
+       "slide_type": "notes"
       }
      },
-     "outputs": []
+     "source": [
+      "## Notes for future presentations\n",
+      "\n",
+      "What about patents? Do they matter? Pattents are originaly intendet to \"promote the progress of science and the useful arts\". Is that still the case? "
+     ]
     }
    ],
    "metadata": {}
